--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 
 # To get fundamental data from the API, you should apply for an API key.
 ALPHA_VANTAGE_API_KEYS=key1,key2,key3
+GDRIVE_PARENT_FOLDER_ID=1234567890
