--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,7 @@
 
 # To get fundamental data from the API, you should apply for an API key.
 ALPHA_VANTAGE_API_KEYS=key1,key2,key3
-GDRIVE_PARENT_FOLDER_ID=1234567890
+GDRIVE_PARENT_FOLDER_ID=your_google_drive_folder_id
+DINGTALK_KEY=your_dingtalk_key
+DINGTALK_SECRET=your_dingtalk_secret
+API_HOST=https://your-stock-host.com/
